# cvmaker

./: .gitignore  .travis.yml  Cargo.toml  README.md  \  clippy_todo.txt
src/: base.rs  dao.rs  graphics.rs  lib.rs  logic.rs  main.rs  renderer.rs
src/graphics/: datepicker.rs  mod.rs
src/resources/: theme.toml
src/test/: input_basic_form
