[package]
name = "cvmaker"
version = "0.1.0"
authors = ["Miloslav Žežulka <zezulka95@gmail.com>"]

[dependencies]
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
serde_test = "^1"
cursive = "0.9.0"
chrono = {version = "0.4.5", features = ["serde"]}
fast_chemail = "0.9.5"
phonenumber = "0.2.1+8.9.0"
url = "1.7.1"
url_serde = "0.2.0"
isocountry = "0.2.0"
derive_builder = "0.5.1"
vfs = "0.2.0"
uuid = { version = "0.6", features = ["serde", "v4"]}